--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,14 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <title> Расписание ТвГУ </title>
+    <link rel="shortcut icon" href="/favicon.ico">
+    <link href="/style-stylus.css" rel="stylesheet">
+    <link href="/style-sass.css" rel="stylesheet">
 </head>
 
 <body class="main-page">
     <div id="app" />
+    <script type="text/javascript" src="/js/bundle.js"></script>
 </body>
 
 </html>
